[project]
name = "backupsystem"
version = "0.1.0"
description = ""
authors = [
    {name = "Blackflame796",email = "pws15548@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "google-api-python-client (>=2.174.0,<3.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "schedule (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
